# ai-hand-robot

./: .gitignore  README.md  calibrate.py  cli.py  demo.py  gesture.py  idle.py  list_ports.py  pyproject.toml
ai/: README.md  __init__.py  agent.py  main.py  mic.py  system_prompt.md  transcribe.py
demo/: README.md  __init__.py  calibrate.py  check.py  demo.py  gesture.py  idle.py  list_ports.py
hand/: README.md  __init__.py  controller.py  ports.py
tests/: test_idle_safety.py
