[project]
name = "ai-hand-robot"
version = "0.1.0"
description = "Seeed Studio Amazing Hand (左手) のシンプルな制御プログラム"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rustypot>=0.6.0",
    "numpy>=1.24.0",
    "pyserial>=3.5",
    "openai>=1.40.0",
    "sounddevice>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hand = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "demo", "hand"]

[tool.uv]
package = true
